gotta make SelfUrinate SelfDefecate happen if using ground or toilet action ends too quickly

1/1/25
-Made player force awake if they start peeing or pooping in their sleep.
-Managing to halt the SelfDefecate or SelfUrinate action results in instant defecation / urination

12/31/24
-Made ToiletDefecate.lua also reduce urinate value, not just defecate
-Added GUI in player menu
-Fixed percentages in tooltips

12/30/24
-Added 3 new sandbox options
-Added support for disabling purposeful self urination / defecation
-Simplified sandbox-options.txt
-Player needs soap and water to clean soiled clothes + entire clean soiled clothes system added

12/26/24
-Added "icon.png"
-Added icons for context menu options
-Remade trait icons (Unused)
-Added weak and strong bladder traits (unused for now)

12/23/24
-Added context menu options for using the bathroom with a urinal, toilet, ground, and on self
-Added UrinateAction and DefecateAction actions
-GetSoilableClothing() BathroomUtils function
-Added "Liquid Laxative" and "Liquid Diuretic" liquids
-Made Pee, Laxative, and Diuretic liquids mixable.
-Added "Filtered Urine" liquid
-Revamped sandbox options page
-Added more underwear to the clothing overlay list
-Separated out "UrinateAction" and "DefecateAction" timed actions into three types
-Added HumanUrine_Small, HumanUrine_Large, HumanFeces items.
-Made HumanUrine_Small spawn when the player pees themselves wearing clothes
-Made HumanUrine_Large spawn when the player pees without clothes, either by squatting or having an accident without clothes
-Made HumanFeces spawn when the player poops on the ground
-Shortened PeeToilet and PeeSelf sounds
-Added functionality for:
	Sandbox_BathroomFunctions_PoopOnSelfRequirement
	Sandbox_BathroomFunctions_PoopOnGroundRequirement
	Sandbox_BathroomFunctions_PoopInToiletRequirement
	Sandbox_BathroomFunctions_PeeOnSelfRequirement
	Sandbox_BathroomFunctions_PeeOnGroundRequirement
	Sandbox_BathroomFunctions_PeeInToiletRequirement