@@ -3,6 +3,9 @@ gotta make SelfUrinate SelfDefecate happen if using ground or toilet action ends
 1/1/25
 -Made player force awake if they start peeing or pooping in their sleep.
 -Managing to halt the SelfDefecate or SelfUrinate action results in instant defecation / urination
+-Renamed many functions for clarity
+-Added pee in container context menu option. Takes amount in mL out of bladder and puts it into the selected bottle.
+-Added fallback default values in case the mod updates and the player can't set sandbox values
 
 12/31/24
 -Made ToiletDefecate.lua also reduce urinate value, not just defecate
